Notebook - Migrate to React - Remove old FE